tests/src/frontend/typechecking/invalid/frozen_async_met_1.sk
mutable class Foo(mutable v: Int) {
  async readonly fun no(): ^void {
    void
  }
}
